json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000034.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000034.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: Illegal(
            Some(
                Number(
                    MinusMissingDigit,
                ),
            ),
        ),
        origin: "16666666666666666666666666666666666666666666666666666666666666666666666679.6111-",
        invalid_row: 9,
        invalid_col: 25,
    },
)
