json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000036.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000036.json
snapshot_kind: text
---
Ok(
    Array(
        [
            Number(
                1066.0,
            ),
            Number(
                10.0,
            ),
            Number(
                1.0,
            ),
            Number(
                0.1,
            ),
            Number(
                -1.0,
            ),
            Number(
                -8.88888888888889e31,
            ),
            String(
                "rod",
            ),
        ],
    ),
)
